Add discover and footer sections

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             </figure>
             <nav>
                 <ul>
-                    <li><a href="#">Welcome</a></li>
-                    <li><a href="#">Accomodations</a></li>
-                    <li><a href="#">Wellness</a></li>
-                    <li><a href="#">Events</a></li>
+                    <li><a href="#hero">Welcome</a></li>
+                    <li><a href="rooms.html">Rooms</a></li>
+                    <li><a href="offers.html">Offers</a></li>
+                    <li><a href="#top-footer">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -27,12 +27,58 @@
             <p>
                 Quasi eligendi asperiores beatae, delectus velit ea nihil vel maxime quia, hic excepturi?
             </p>
-            <button class="booking">
+            <button>
                 Discover SB
             </button>
         </div>
     </section>
 
-    
+    <section id="discover">
+        <div id="enjoy">
+            <h2>Enjoy Beach Life</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore maiores fugit incidunt sed? Asperiores corrupti, doloremque ipsam non tenetur, facere voluptatem iste, mollitia cumque autem hic impedit error maiores odio?
+            </p>
+        </div>
+
+        <div id="booking">
+            <div id="arriving">
+                <h4>Arriving</h4>
+            </div>
+            <div id="departing">
+                <h4>Departing</h4>
+            </div>
+            <div id="guests">
+                <h4>Guests</h4>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div id="top-footer">
+            <figure>
+                <img id="footer-img" src="./images/starfish_logo.jpg">
+            </figure>
+            <div>
+                <h3>About Us</h3>
+                <p>
+                    Starfish Beach House<br>
+                    1000 Starfish Ave.<br>
+                    Santa Barbara, CA 93101<br>
+                    (805) 555-5555<br>
+                    contact@example.com
+                </p>
+            </div>
+            <div>
+                <h3>Explore</h3>
+                <ul>
+                    <li><a href="#hero">Welcome</a></li>
+                    <li><a href="rooms.html">Rooms</a></li>
+                    <li><a href="offers.html">Offers</a></li>
+                    <li><a href="#top-footer">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
