--- a/offers.html
+++ b/offers.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Starfish Beach House</title>
+    <title>Starfish Beach House - Rooms</title>
 </head>
 <body>
     <section id="hero">
@@ -14,47 +14,18 @@
             </figure>
             <nav>
                 <ul>
-                    <li><a href="#hero">Welcome</a></li>
+                    <li><a href="index.html">Welcome</a></li>
                     <li><a href="rooms.html">Rooms</a></li>
                     <li><a href="offers.html">Offers</a></li>
                     <li><a href="#top-footer">Contact</a></li>
                 </ul>
             </nav>
         </header>
-
-        <div id="welcome-heading">
-            <h1>Welcome to the Starfish</h1>
-            <p>
-                Quasi eligendi asperiores beatae, delectus velit ea nihil vel maxime quia, hic excepturi?
-            </p>
-            <button>
-                Discover SB
-            </button>
-        </div>
     </section>
 
-    <section id="discover">
-        <div id="enjoy">
-            <h2>Enjoy Beach Life</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore maiores fugit incidunt sed? Asperiores corrupti, doloremque ipsam non tenetur, facere voluptatem iste, mollitia cumque autem hic impedit error maiores odio?
-            </p>
-        </div>
-
-        <div id="booking">
-            <div id="arriving">
-                <h4>Arriving</h4>
-            </div>
-            <div id="departing">
-                <h4>Departing</h4>
-            </div>
-            <div id="guests">
-                <h4>Guests</h4>
-            </div>
-        </div>
-    </section>
+    
+    
 </body>
-
 <footer>
     <div id="top-footer">
         <figure>
@@ -73,7 +44,7 @@
         <div>
             <h3>Explore</h3>
             <ul>
-                <li><a href="#hero">Welcome</a></li>
+                <li><a href="index.html">Welcome</a></li>
                 <li><a href="rooms.html">Rooms</a></li>
                 <li><a href="offers.html">Offers</a></li>
                 <li><a href="#top-footer">Contact</a></li>
