Add offers.html and contact form

--- a/index.html
+++ b/index.html
@@ -44,13 +44,36 @@
         <div id="booking">
             <div id="arriving">
                 <h4>Arriving</h4>
+                <div class="input">
+                    <h3>15</h3>
+                </div>
             </div>
             <div id="departing">
                 <h4>Departing</h4>
+                <div class="input">
+                    <h3>18</h3>
+                </div>
             </div>
             <div id="guests">
                 <h4>Guests</h4>
+                <div class="input">
+                    <h3>2</h3>
+                </div>
             </div>
+        </div>
+    </section>
+
+    <section id="contact">
+        <figure>
+            <img src="./images/contact_beach.jpg" alt="">
+        </figure>
+        <div id="form">
+            <h2>Contact</h2>
+            <form action="https://airform.io/elise.weir@tech901.org" method="post">
+                <input type="text" name="name" placeholder="Enter your name"><br>
+                <textarea name="message" placeholder="Enter your message"></textarea><br>
+                <button>Send</button>
+            </form>
         </div>
     </section>
 </body>
