--- a/offers.html
+++ b/offers.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Starfish Beach House - Rooms</title>
+    <title>Starfish Beach House - Offers</title>
 </head>
 <body>
     <section id="hero">
@@ -21,9 +21,47 @@
                 </ul>
             </nav>
         </header>
+        <div id="welcome-heading">
+            <h1>Starfish Offers</h1>
+            <p>
+                Take advantage of our special offers! We have exciting discounts and events to suite every taste and budget. You'll have plenty to do when you stay at the Starfish Beach House!
+            </p>
+        </div>
     </section>
 
-    
+    <section class="offer">
+        <div class="description">
+            <h4>Sun & Sand</h4>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos esse tempore nulla! Laudantium maiores nostrum reprehenderit illo. Voluptatibus deleniti assumenda consectetur ratione ullam. Fugit, quis aut id nesciunt magni labore!
+            </p>
+        </div>
+        <figure>
+            <img src="./images/offer_beach.jpg" alt="beach with palm trees">
+        </figure>
+    </section>
+    <section class="offer">
+        <figure>
+            <img src="./images/offer_train.jpg" alt="train on a beach during sunset">
+        </figure>
+        <div class="description">
+            <h4>All Aboard</h4>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio quaerat, reprehenderit dolorum saepe perspiciatis quo unde cupiditate impedit ex, quibusdam voluptate! Neque, modi non quasi provident voluptate esse rem explicabo?
+            </p>
+        </div>
+    </section>
+    <section class="offer">
+        <div class="description">
+            <h4>Booze Crews</h4>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus odit sint nulla assumenda tenetur illo a vel commodi sit ratione! Et delectus neque voluptatum recusandae natus? Non sequi quidem ducimus?
+            </p>
+        </div>
+        <figure>
+            <img src="./images/offer_wine.jpg" alt="pouring wine into two glasses">
+        </figure>
+    </section>
     
 </body>
 <footer>
