--- a/rooms.html
+++ b/rooms.html
@@ -30,10 +30,10 @@
     </section>
 
     <section class="room">
-        <div class="room-description">
+        <div class="description">
             <h2>The Nook</h2>
             <p>
-                Looking for a beach room that won't break the budget? The Nook is just the right size for travel, with an oceanside view. Starting at $100/night.
+                The Nook is just the right size for travel, with an oceanside view. Starting at $100/night.
             </p>
             <button>
                 Book The Nook
@@ -47,7 +47,7 @@
         <figure>
             <img src="./images/family_room.jpg" alt="room with table, couch, and window">
         </figure>
-        <div class="room-description">
+        <div class="description">
             <h2>The Family Den</h2>
             <p>
                 Traveling with your family? Look no further than our Family Den. Starting at $300/night.
@@ -58,7 +58,7 @@
         </div>
     </section>
     <section class="room">
-        <div class="room-description">
+        <div class="description">
             <h2>The Pinnacle</h2>
             <p>
                 Every luxury you can imagine, for only $600/night.
